[project]
name = "deep-dna-2"
version = "0.0.2"
authors = [
  { name="David W. Ludwig II", email="davidludwigii@gmail.com" }
]
description = "Deep learning models for handling DNA sequences and high-throughput sequencing samples."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "jsonargparse >= 4.32.0",
  "lightning[pytorch-extra]",
  "omegaconf >= 2.3.0",
  "wandb >= 0.17.3"
]

[project.urls]
"Homepage" = "https://github.com/DLii-Research/deep-dna"
"Bug Tracker" = "https://github.com/DLii-Research/deep-dna/issues"

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "/opt/conda/envs"
venv = "qiime2-amplicon-2024.5"
pythonVersion = "3.9.19"
