[project]
name = "dbtk-core"
version = "0.1.0"
authors = [
  { name="David W. Ludwig II", email="davidludwigii@gmail.com" }
]
description = "A repository of common layers, models, and tools for building and running deep-learning models for computational biology."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "lightning[pytorch-extra] >= 2.4.0",
  "wandb >= 0.17.3"
]

[project.urls]
"Homepage" = "https://github.com/DLii-Research/dbtk-core"
"Bug Tracker" = "https://github.com/DLii-Research/dbtk-core/issues"

[tool.ruff]
line-length = 100
